@@ -1,6 +1,7 @@
 libece 0.2.1-wip (DD/MM/YYYY):
-	- added .gitignore
+	- contrib: produce.sh extensions
 	- SB API: getInfo returns Operation CA Cert; s/csr_tmpl/csr_template
+	- added .gitignore
 
 libece 0.2a (02/09/2013):
 	- QtJson (GPL) -> QJson (LGPL)
